# backend

./: .gcloudignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  conftest.py  database.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  requirements_versioned.txt
.github/workflows/: discord-ci-alerts.yml  discord-deployments.yml  discord-pr-reviews.yml
account/: admin.py  models.py  renderers.py  serializers.py  test_google_auth_email.py  tests.py  urls.py  utils.py  views.py
account/management/commands/: gmail_auth.py
account/migrations/: 0001_initial.py  0002_builtin_roles.py  0003_fix_account_user_schema.py  0004_merge_roles_and_schema_fix.py  0005_role_flag_db_defaults.py
analytics/: admin.py  clip-insights-459600-ee0c751a2ac3.json  models.py  services.py
analytics/management/commands/: fetch_ga.py
analytics/migrations/: 0001_initial.py
analytics/templates/admin/: analytics_chart.html  pageviews_chart.html
api/: urls.py  views.py
billing/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
billing/management/commands/: setup_billing.py
billing/migrations/: 0001_initial.py
core/: settings.py  tests.py  urls.py  views.py
docs/: PADDLE_BILLING.md  PERFORMANCE.md  PLANS_AND_PRICING.md  setup_pgvector.sql  transcript_extraction.js
files/: apps.py  serializers.py  tests.py  utils.py  views.py
integrations/: fireworks.py  keys.py  registry.py  tests.py
integrations/analytics/: base.py  ga4.py  noop.py
integrations/email/: base.py  console.py  gmail_api.py  resend.py  smtp.py
integrations/llm/: base.py  fireworks.py  gemini.py  noop.py
integrations/oauth/: base.py  google.py
integrations/payment/: base.py  noop.py  paddle.py
integrations/storage/: base.py  s3.py
integrations/transcription/: base.py  groq_whisper.py
integrations/vectorstore/: base.py  cockroach.py  cockroach_store.py  memory.py
plans/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
plans/migrations/: 0001_initial.py  0002_seed_plans.py  0003_backfill_user_plans.py  0004_remove_transcription_limits.py
scripts/: integration_smoke.py  llm_test.py
textutils/: ai_config.py  chroma_initialization.py  chroma_initialization1.py  chroma_initialization3_grok.py  chroma_initializtion2.py  gemini.py  groq.py  models.py  serializers.py  tests.py  utils.py  view1.py  views.py
textutils/migrations/: 0001_initial.py
userspace/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
userspace/migrations/: 0001_initial.py
utils/: cockroachdb_vectorstore.py  logger.py
videos/: admin.py  ai_config.py  apps.py  models.py  prompts.py  serializers.py  tests.py  urls.py  views.py
videos/migrations/: 0002_remove_cache_layers.py
videos/services/: chat.py  chunking.py  summarize.py  transcribe.py
