[project]
name = "clip-insights-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3>=1.42.9",
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-auth>=2.43.0",
    "google-generativeai>=0.8.5",
    "groq>=0.37.1",
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-huggingface>=1.2.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
    "sentence-transformers>=5.2.0",
    "psycopg[binary]>=3.3.2",
    "torch>=2.9.1",
    "django-cockroachdb>=6.0",
    "uvicorn>=0.40.0",
    "sqlalchemy-cockroachdb>=2.0.3",
    "langchain-community>=0.4.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
