[project]
name = "clip-insights-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3>=1.42.9",
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-auth>=2.43.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-generativeai>=0.8.5",
    "groq>=0.37.1",
    "langchain-google-genai>=4.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
    "psycopg[binary]>=3.3.2",
    "django-cockroachdb>=6.0",
    "uvicorn>=0.40.0",
    "instructor>=1.15.4",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
# Include Django's conventional `tests.py` alongside pytest's defaults so the same
# suite runs under both `pytest` and `python manage.py test`.
python_files = ["tests.py", "test_*.py", "*_test.py"]
# `scripts/` holds ad-hoc runnable scripts (e.g. llm_test.py) that execute real
# API code at import time; they are not pytest tests, so keep them out of collection.
norecursedirs = ["scripts", ".venv", "node_modules"]
addopts = "-q"
